--- a/elemental/Elemental/demoapp/src/main/res/values/strings.xml
+++ b/elemental/Elemental/demoapp/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_resultado_matrices">resultado_matrices</string>
 </resources>
