--- a/elemental/Elemental/demoapp/src/main/res/values/strings.xml
+++ b/elemental/Elemental/demoapp/src/main/res/values/strings.xml
@@ -122,4 +122,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_resultado_matrices">resultado_matrices</string>
+    <string name="title_activity_resultado_matrices__lu">resultado_matrices_LU</string>
 </resources>
