--- a/elemental/Elemental/demoapp/src/main/res/values/strings.xml
+++ b/elemental/Elemental/demoapp/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="title_activity_multiple_root">MultipleRootActivity</string>
     <string name="title_activity_multiple_root_table2">MultipleRootTable2Activity</string>
     <string name="title_activity_graph">GraphActivity</string>
+    <string name="title_activity_metodos_interpolacion">MetodosInterpolacionActivity</string>
 </resources>
